[gd_scene load_steps=5 format=2]

[ext_resource path="res://AssetsInSuperSecureAndUn1queF0lder/Scripts/CustomPopupTextInput.gd" type="Script" id=1]
[ext_resource path="res://AssetsInSuperSecureAndUn1queF0lder/Styles/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://AssetsInSuperSecureAndUn1queF0lder/Styles/CustomTouchLineEdit.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.117647, 0.137255, 0.941176 )

[node name="CustomPopupTextInput" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Control" parent="Box"]
margin_right = 736.0
margin_bottom = 316.0
focus_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Box"]
margin_top = 320.0
margin_right = 736.0
margin_bottom = 366.0
text = "TITLE"

[node name="LineEdit" type="LineEdit" parent="Box" groups=[
"IgnoreTouchInput",
]]
margin_top = 370.0
margin_right = 736.0
margin_bottom = 416.0
custom_styles/normal = ExtResource( 3 )
text = "Text"
max_length = 128
caret_blink = true

[node name="Bottom" type="Control" parent="Box"]
margin_top = 420.0
margin_right = 736.0
margin_bottom = 736.0
focus_mode = 2
size_flags_vertical = 3
[connection signal="focus_exited" from="Box/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="Box/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Box/LineEdit" to="." method="_on_LineEdit_text_entered"]
